{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 88,
  "lineage": "f9e19aba-88a1-9f04-f56e-9238ab388ac9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175-20221223064242002600000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175",
            "target_id": "i-079a0d5adf05e95aa"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175-20221223064242042400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175",
            "target_id": "i-09b4e44f1b935737e"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175-20221223064242089100000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175",
            "target_id": "i-0cf9c49092ddbcd99"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ece32741ce85c65a",
            "domain": "vpc",
            "id": "eipalloc-02b3dd48fc6976908",
            "instance": "i-079a0d5adf05e95aa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b4212743c96556f2",
            "private_dns": "ip-10-0-0-206.ec2.internal",
            "private_ip": "10.0.0.206",
            "public_dns": "ec2-44-196-225-81.compute-1.amazonaws.com",
            "public_ip": "44.196.225.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-0"
            },
            "tags_all": {
              "Name": "EIP-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08c4e3ead9cee3090",
            "domain": "vpc",
            "id": "eipalloc-084563cc112a1be81",
            "instance": "i-09b4e44f1b935737e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9c25bfbc8a95a4e",
            "private_dns": "ip-10-0-21-65.ec2.internal",
            "private_ip": "10.0.21.65",
            "public_dns": "ec2-54-82-37-249.compute-1.amazonaws.com",
            "public_ip": "54.82.37.249",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-1"
            },
            "tags_all": {
              "Name": "EIP-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-029cb360403536f39",
            "domain": "vpc",
            "id": "eipalloc-04de6e5ee6c4c9826",
            "instance": "i-0cf9c49092ddbcd99",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03fb4607b1dc787ad",
            "private_dns": "ip-10-0-44-158.ec2.internal",
            "private_ip": "10.0.44.158",
            "public_dns": "ec2-52-44-80-21.compute-1.amazonaws.com",
            "public_ip": "52.44.80.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-2"
            },
            "tags_all": {
              "Name": "EIP-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:288952537302:instance/i-079a0d5adf05e95aa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079a0d5adf05e95aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b4212743c96556f2",
            "private_dns": "ip-10-0-0-206.ec2.internal",
            "private_ip": "10.0.0.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd107c12cd193d16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b59bb63161fb27c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0accd7103f1f126e4",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-0"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-0"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "vpc_security_group_ids": [
              "sg-0b59bb63161fb27c5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:288952537302:instance/i-09b4e44f1b935737e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b4e44f1b935737e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e9c25bfbc8a95a4e",
            "private_dns": "ip-10-0-21-65.ec2.internal",
            "private_ip": "10.0.21.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00fa64969e8b4a070",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b59bb63161fb27c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03479452ceee1ff20",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-1"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "vpc_security_group_ids": [
              "sg-0b59bb63161fb27c5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:288952537302:instance/i-0cf9c49092ddbcd99",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf9c49092ddbcd99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03fb4607b1dc787ad",
            "private_dns": "ip-10-0-44-158.ec2.internal",
            "private_ip": "10.0.44.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e34894fdbdb4ef0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b59bb63161fb27c5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3af2a9eb99cd07d",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-2"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Test",
              "Name": "Instance-2"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "vpc_security_group_ids": [
              "sg-0b59bb63161fb27c5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288952537302:internet-gateway/igw-0d13f71e8ef1ac936",
            "id": "igw-0d13f71e8ef1ac936",
            "owner_id": "288952537302",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0f34d07d5cec54ae8"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:loadbalancer/app/ALB/27e62694017baf08",
            "arn_suffix": "app/ALB/27e62694017baf08",
            "dns_name": "ALB-1267880199.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:288952537302:loadbalancer/app/ALB/27e62694017baf08",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-0b59bb63161fb27c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03479452ceee1ff20"
              },
              {
                "subnet_id": "subnet-0accd7103f1f126e4"
              },
              {
                "subnet_id": "subnet-0d3af2a9eb99cd07d"
              }
            ],
            "subnets": [
              "subnet-03479452ceee1ff20",
              "subnet-0accd7103f1f126e4",
              "subnet-0d3af2a9eb99cd07d"
            ],
            "vpc_id": "vpc-0f34d07d5cec54ae8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:listener/app/ALB/27e62694017baf08/0657969952b7f5a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:288952537302:listener/app/ALB/27e62694017baf08/0657969952b7f5a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:loadbalancer/app/ALB/27e62694017baf08",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:listener-rule/app/ALB/27e62694017baf08/0657969952b7f5a9/1ccc1bd8f5adef2f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:288952537302:listener-rule/app/ALB/27e62694017baf08/0657969952b7f5a9/1ccc1bd8f5adef2f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:listener/app/ALB/27e62694017baf08/0657969952b7f5a9",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175",
            "arn_suffix": "targetgroup/TargetGroup/707907cc01e92175",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:288952537302:targetgroup/TargetGroup/707907cc01e92175",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f34d07d5cec54ae8"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d13f71e8ef1ac936",
            "id": "r-rtb-0577f0a34ef2cd0681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0577f0a34ef2cd068",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288952537302:route-table/rtb-0577f0a34ef2cd068",
            "id": "rtb-0577f0a34ef2cd068",
            "owner_id": "288952537302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d13f71e8ef1ac936",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "vpc_id": "vpc-0f34d07d5cec54ae8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f8dc98d2add3260",
            "route_table_id": "rtb-0577f0a34ef2cd068",
            "subnet_id": "subnet-0accd7103f1f126e4"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f61a1f175f5005bf",
            "route_table_id": "rtb-0577f0a34ef2cd068",
            "subnet_id": "subnet-03479452ceee1ff20"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0522a2b0c633c34f4",
            "route_table_id": "rtb-0577f0a34ef2cd068",
            "subnet_id": "subnet-0d3af2a9eb99cd07d"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288952537302:security-group/sg-0b59bb63161fb27c5",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b59bb63161fb27c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CustomSG",
            "name_prefix": "",
            "owner_id": "288952537302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f34d07d5cec54ae8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288952537302:subnet/subnet-0accd7103f1f126e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0accd7103f1f126e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288952537302",
            "tags": {
              "Name": "Public-Subnet-0"
            },
            "tags_all": {
              "Name": "Public-Subnet-0"
            },
            "vpc_id": "vpc-0f34d07d5cec54ae8"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288952537302:subnet/subnet-03479452ceee1ff20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-03479452ceee1ff20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288952537302",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0f34d07d5cec54ae8"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288952537302:subnet/subnet-0d3af2a9eb99cd07d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-0d3af2a9eb99cd07d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288952537302",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0f34d07d5cec54ae8"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288952537302:vpc/vpc-0f34d07d5cec54ae8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e529e539f827e910",
            "default_route_table_id": "rtb-01ea0f7837602e03a",
            "default_security_group_id": "sg-0ef2237208857ee75",
            "dhcp_options_id": "dopt-0c9cdcf8f674cd6b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f34d07d5cec54ae8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01ea0f7837602e03a",
            "owner_id": "288952537302"
          }
        }
      ]
    }
  ]
}